--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,20 +50,10 @@ add_executable(client client/linux/main.cc  client/linux/main_wnd.cc client/cond
 
 
 set(absl_LIBRARIES2
-        absl::algorithm
-        absl::base
-        absl::debugging
-        absl::flat_hash_map
-        absl::memory
-        absl::meta
-        absl::numeric
-        absl::str_format
-        absl::strings
-        absl::synchronization
-        absl::time
         absl::flags
-        absl::flags_internal
-        absl::utility)
+        absl::flags_parse
+        )
+
 
 
 
